[VARKA] Replace the emitter's scalar tail with a masked epilogue, and compact with compress(mask)
### What changes were proposed in this pull request?

Milestone 4's first task (`sql/varka/plans/PLAN_TASK_24.md`), in five commits that are each green on their own.

**1. Measure the scalar tail before replacing it.** Milestone 4's open question 3. Answering it meant building the measurement: no committed harness in this project had ever executed a scalar tail row, because every size in every one of them is lane-aligned — `VarkaEmitterParityBenchmark` ran one call over 1,000,000 rows, `DateVectorOpsBenchmark`'s sizes are 32 / 10000 / 1000000, and Spark's default `COLUMN_BATCH_SIZE` is 4096. A new batch-length alignment section drives the same total row count through aligned and unaligned chunks at two chunk sizes.

**2. Replace the scalar tail with a masked epilogue.** The emitter's remainder handling was a second full walk of the IR — `emitTailNode` and its helpers lowered all thirteen node types a second time into int locals. The rows past `loopBound` are now one more iteration of the same lane-group body: `i` is `loopBound` with no back edge, the lane count is the remainder, and `VectorSpecies.indexInRange` supplies the mask that the loads and stores take. Nothing between a load and a store is masked, so the main loop is untouched and the 2.3x-2.9x masked-op cost is not paid anywhere it would be felt. One epilogue method per density, replacing one tail method per density, so method count, driver call sequence and `GROUP_BUDGET` are all unchanged.

One design error is worth naming because it is silent: `validityBitsAt`/`orValidityBitsAt` take a lane *width*, not a row count — the width decides the byte span — so a nine-row group asks for `groupBytes(9) == 1`, reads one byte and reports its ninth row null; the write side can also store a short across bytes 2 and 3 of a three-byte bitmap. Hence `partialValidityBitsAt`/`orPartialValidityBitsAt`, kept separate from the w